--- a/addons/web/static/src/scss/navbar.scss
+++ b/addons/web/static/src/scss/navbar.scss
@@ -224,9 +224,8 @@ body.o_is_superuser .o_menu_systray {
         margin-right: 15px;
 
         img {
-            height: 80%;
-            margin-top: 4px;
-            margin-bottom: 5px;
+            height: 100%;
+            padding: 10px;
         }
     }
 }
