--- a/addons/web/static/src/scss/form_view.scss
+++ b/addons/web/static/src/scss/form_view.scss
@@ -14,6 +14,9 @@
     .oe_grey {
         opacity: 0.5;
     }
+    .btn-link {
+        padding: 0;
+    }
     .oe_inline {
         width: auto!important;
         @include media-breakpoint-up(vsm, $o-extra-grid-breakpoints) {
